Cleanup + Update to jdk11 + update to  dse 6.7